# cents

./: .coverage  .gitignore  CLAUDE.md  CONTRIBUTING.md  DOLT_REMOTE.md  LICENSE  OPERATIONS.md  README.md  REVIEW.md  SECURITY.md  manifest  pyproject.toml
.github/workflows/: deploy-website.yml  eval.yml
data/universes/: sp100_static_v1.csv
examples/: README.md
experiments/: hit_rate_delta_v1.yaml  pilot_v1.yaml  pilot_v2.yaml  pilot_v3.yaml
scripts/: cents-wrap  demo-setup.sh  demo.sh  factory-verify  generate_docs.py  replay_concentration.py  rerun_backtests.py
scripts/launchd/: alert-digest.plist  delistings.plist  eval-drift.plist  eval-run.plist  event-refresh.plist  factory-llm.plist  factory-random.plist  factory-verify.plist  shadow.plist  status.plist
src/cents/: __init__.py  cache.py  cli.py  config.py  datasets.py  exceptions.py  llm_models.py  llm_usage.py  notify.py  pricing.py  serialization.py
src/cents/agents/: __init__.py  base.py  event.py  fundamentals.py  insider.py  macro.py  moat.py  orchestrator.py  random_orchestrator.py  sentiment.py  signal_mode.py  technical.py
src/cents/api/: __init__.py  errors.py  position.py  research.py  routes.py  thesis.py  watchlist.py
src/cents/broker/: __init__.py  alpaca.py
src/cents/cli/: __init__.py  _disclosures.py  _research_html.py  _shared.py  alert.py  backtest.py  broker.py  cache.py  calibration.py  cohort.py  dataset.py  eval.py  event.py  evidence.py  experiment.py  factory.py  outcome.py  pilot.py  portfolio.py  position.py  recommend.py  report.py  research.py  scan.py  screener.py  shadow.py  status.py  thesis.py  universe.py  usage.py  watch.py
src/cents/data/: __init__.py  alpaca.py  fmp.py  providers.py
src/cents/db/: __init__.py  repository.py  schema.py
src/cents/eval/: __init__.py  baseline.json  baseline.py  calibrate.py  golden_premise.jsonl  golden_sentiment.jsonl  report.py  runner.py
src/cents/experiments/: __init__.py  registry.py
src/cents/factory/: __init__.py  config.py  engine.py  premise.py  sector_map.py  shadow.py  universe_resolver.py
src/cents/finance/: __init__.py  calibration.py  costs.py  hedging.py  liquidity.py  portfolio.py  sizing.py  triggers.py
src/cents/models/: __init__.py  alert.py  backtest.py  delisting.py  event.py  evidence.py  experiment.py  factory_run.py  llm_usage.py  outcome.py  position.py  shadow_open.py  thesis.py  universe.py  watchlist.py
src/cents/screeners/: __init__.py  _base.py  growth.py  insider_cluster.py  mean_reversion.py  momentum.py  value.py
src/cents/viz/: __init__.py  ascii.py  queries.py  static.py  sunburst.py
tests/: __init__.py  conftest.py  test_agents.py  test_api.py  test_broker.py  test_cache.py  test_calibration.py  test_cli.py  test_cohort.py  test_config.py  test_cost_cap.py  test_data.py  test_delistings.py  test_disclosures.py  test_eval.py  test_event.py  test_experiments.py  test_factory.py  test_finance.py  test_insider.py  test_integration.py  test_llm_usage.py  test_lookahead_audit.py  test_moat.py  test_models.py  test_notify.py  test_premise.py  test_prompt_injection.py  test_random_orchestrator.py  test_recordkeeping.py  test_repository.py  test_schema.py  test_screeners.py  test_sector_map.py  test_sentiment_llm.py  test_shadow_opens.py  test_universe.py  test_viz_queries.py
website/: astro.config.mjs  package.json
website/public/: README.md  demo.cast
website/public/examples/: research-NVDA.html
website/src/components/: AsciinemaPlayer.astro  Footer.astro
website/src/content/docs/: agents.mdx  architecture.mdx  cohort.mdx  configuration.mdx  events.mdx  factory.mdx  index.mdx  principles.mdx  quickstart.mdx  roadmap.mdx  scheduling.mdx  scope.mdx  screeners.mdx  universe.mdx
website/src/content/docs/commands/: _backtest.intro.mdx  _broker.intro.mdx  _eval.intro.mdx  _experiment.intro.mdx  _factory.intro.mdx  _recommend.intro.mdx  _usage.intro.mdx  alert.mdx  backtest.mdx  broker.mdx  calibration.mdx  cohort.mdx  eval.mdx  event.mdx  evidence.mdx  experiment.mdx  factory.mdx  index.mdx  outcome.mdx  portfolio.mdx  position.mdx  recommend.mdx  research.mdx  scan.mdx  screener.mdx  shadow.mdx  status.mdx  thesis.mdx  universe.mdx  usage.mdx  watch.mdx
website/src/styles/: custom.css
