[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cents"
version = "0.1.0"
description = "Thesis-driven investment research, agent-orchestrated"
requires-python = ">=3.11"
authors = [{name = "Matthew Fellows"}]
license = "MIT"
license-files = ["LICENSE"]
readme = "README.md"
keywords = ["investing", "research", "thesis", "portfolio", "agents", "claude", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "click>=8.1.0",
    # Anthropic SDK upper bound is intentional — pre-1.0 minors can change
    # response-block shapes (.content[0].text access patterns are scattered
    # across agents) and retry semantics. Bumping past 1.0 should be a
    # deliberate verified change, not a transitive resolver decision.
    "anthropic>=0.50.0,<1.0",
]

[project.urls]
Homepage = "https://dollars-and-cents.ai"
Documentation = "https://dollars-and-cents.ai/docs"
Repository = "https://github.com/wolfbane/cents"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    # freezegun for clock-sensitive tests — engine._has_invalidation_alert
    # checks a 1-day staleness window; without freezegun the boundary is
    # untestable and CI-time drift could flip behavior.
    "freezegun>=1.5.0",
]
broker = [
    # alpaca-py changed Adjustment enum semantics across minors; the upper
    # bound forces an explicit migration when a major drops.
    "alpaca-py>=0.30.0,<1.0",
]
viz = [
    # Visualization stack. Optional — only `cents pilot dashboard` and
    # `cents report` require these. The data layer (cents/viz/queries.py)
    # has no third-party dependencies and is always importable.
    "rich>=13.0.0",            # tables + layout for the ASCII dashboard
    "plotext>=5.2.8",          # in-terminal plots for the dashboard
    "matplotlib>=3.7.0",       # static PNG exports for cents report
    "plotly>=5.18.0",          # sunburst-only; static HTML export
]
[project.scripts]
cents = "cents.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/cents"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"src/cents/py.typed" = "cents/py.typed"

[tool.mypy]
# Baseline config — strict=false because the codebase isn't fully annotated.
# The py.typed marker makes type info available to downstream consumers of
# cents.finance.* without forcing internal strictness today.
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_unused_ignores = true
